--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "my-v0-project",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Immanuel-Anthony.github.io/Portfolio",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build": "next build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
@@ -46,6 +49,7 @@
     "emailjs-com": "^3.2.0",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "latest",
+    "gh-pages": "^6.3.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "^15.1.0",
