--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,8 +27,11 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build project
-        run: npm run build
+      - name: Build and export project
+        run: |
+          npm run build
+          npm run export
+
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
