--- a/_config.yaml
+++ b/_config.yaml
@@ -3,4 +3,4 @@ title: My Jekyll Site
 description: A description of my site
 baseurl: "" # Optional
 url: "https://immanuel-anthony.github.io/Portfolio/" # Change to your site URL
-source: . # This will set the source directory to the root of the repository
+source: . # This will set the source directory to the root 
